--- a/paper2.html
+++ b/paper2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div>
-      <h1> Demos for "Multi-task WaveNet: EMPHASIS: An Emotional Phoneme-based Acoustic Model for Speech Synthesis System" </h1>
+      <h1> Demos for "EMPHASIS: An Emotional Phoneme-based Acoustic Model for Speech Synthesis System" </h1>
 <h2>
  <b> Abstract </b>
 </h2>
