--- a/paper1.html
+++ b/paper1.html
@@ -7,6 +7,9 @@
     <div>
       <h1> Demos for "Multi-task WaveNet: A Multi-task Generative Model for Statistical
 Parametric Speech Synthesis without Fundamental Frequency Conditions" </h1>
+<h3>
+<font color="red"> The Loading speed for all the audios may be a little slow, so please be patient! </font> 
+</h3>
 <h2>
  <b> Abstract </b>
 </h2>
