add more introduction

--- a/paper3.html
+++ b/paper3.html
@@ -415,8 +415,8 @@
     </div>
 
     <div style="padding-top:16px;">
-        We conduct few-shot speaker conversion over the speakers failed in one-shot speaker conversion. We using
-        different number of utterances to fine-tune the models and evaluate their performance.
+        We conduct few-shot speaker conversion over the speaker of failed case 2 in one-shot speaker conversion.
+        We using different number of utterances to fine-tune the models and evaluate their performance.
     </div>
     <Table style="padding-top:16px;">
         <tr>
