--- a/paper3.html
+++ b/paper3.html
@@ -61,7 +61,7 @@
                             <a href="#Random_samplingS">1.3 Random sampling</a>
                         </li>
                         <li>
-                            <a href="#Fewshot_oneshotS">1.4 Few-shot & one-shot</a>
+                            <a href="#Fewshot_oneshotS">1.4 One-shot & few-shot</a>
                         </li>
                     </ol>
                     <li>
@@ -84,14 +84,6 @@
                         </li>
                         <li>
                             <a href="#Random_samplingEE">1.2 Random sampling</a>
-                        </li>
-                    </ol>
-                    <li>
-                        <a href="#Prosody">2 Prosody</a>
-                    </li>
-                    <ol>
-                        <li>
-                            <a href="#Style_controlEP">2.1 Style control</a>
                         </li>
                     </ol>
                 </ol>
@@ -247,7 +239,7 @@
 
     <h4 style="padding-top:16px;"><a name='Style_controlS'>1.2 Style control</a></h4>
     <div style="padding-top:16px;">
-        Visualization of gradual changes in mel-spectrogram. We present pdf for intuitive view.
+        Visualization of gradual changes in mel-spectrogram. We present GIF for intuitive view.
     </div>
     <div class="imageDiv">
         <img src="paper3_demos/12345.gif" alt="">
