--- a/paper3.html
+++ b/paper3.html
@@ -242,9 +242,9 @@
         Visualization of gradual changes in mel-spectrogram. We present GIF for intuitive view.
     </div>
     <div class="imageDiv">
-        <img src="paper3_demos/12345.gif" alt="">
-        <img src="paper3_demos/0_2.gif" alt="">
-        <img src="paper3_demos/0_3.gif" alt="">
+        <img src="paper3_demos/speaker-style-control-1/1.gif" alt="">
+        <img src="paper3_demos/speaker-style-control-1/2.gif" alt="">
+        <img src="paper3_demos/speaker-style-control-1/3.gif" alt="">
     </div>
     <div style="padding-top:16px;">
         We reuse the reference audios of speaker1 and speaker4 in above experiments.
