--- a/paper3.html
+++ b/paper3.html
@@ -239,7 +239,8 @@
 
     <h4 style="padding-top:16px;"><a name='Style_controlS'>1.2 Style control</a></h4>
     <div style="padding-top:16px;">
-        Visualization of gradual changes in mel-spectrogram. We present GIF for intuitive view.
+        Visualization of gradual changes in mel-spectrogram. We present GIFs of text1, text2 and text3
+        from left to right for intuitive view.
     </div>
     <div class="imageDiv">
         <img src="paper3_demos/speaker-style-control-1/1.gif" alt="">
@@ -261,7 +262,7 @@
             <th>speaker4, α = 1.0</th>
         </tr>
         <tr>
-            <th>Text5</th>
+            <th>Text1</th>
             <th>
                 <audio src="paper3_demos/speaker-style-control-2/text1/1.wav" controls></audio>
             </th>
@@ -279,7 +280,7 @@
             </th>
         </tr>
         <tr>
-            <th>Text6</th>
+            <th>Text2</th>
             <th>
                 <audio src="paper3_demos/speaker-style-control-2/text2/1.wav" controls></audio>
             </th>
@@ -297,7 +298,7 @@
             </th>
         </tr>
         <tr>
-            <th>Text7</th>
+            <th>Text3</th>
             <th>
                 <audio src="paper3_demos/speaker-style-control-2/text3/1.wav" controls></audio>
             </th>
