--- a/paper3.html
+++ b/paper3.html
@@ -13,7 +13,7 @@
     <div>
         <h1>
             Demos for "Multi-reference Tacotron by Intercross Training for Style Disentangling,
-            Transfer and Control"
+            Transfer and Control in Speech Synthesis"
         </h1>
     </div>
     <div style="padding-top:16px;">
