--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   </body>
   <body>
     <div>
-      <h1> Demos for partial publications of the TTS group in Baidu Speech</h1>
-
- 
+      <h1 style="padding-bottom:22px;"> Demos for partial publications of the TTS group in Baidu Speech</h1>
 
 <table border="1" width="1024">
 	<tr>
-		<td width="350" align="center"><b><i><strong><font face="Arial Unicode MS" size="6">Paper List</font></i></td></strong>
+		<td width="350" align="center"><b><i><strong><font face="Arial Unicode MS" size="6">Paper List</font></strong></i></b></td>
 	</tr>
 
 	<tr>
 		<td width="350" align="left">
-		<font face="Arial Unicode MS" size="4"><b>[1] Multi-task WaveNet: A Multi-task Generative Model for Statistical Parametric Speech Synthesis without Fundamental Frequency Conditions </font></b>
+		<font face="Arial Unicode MS" size="4"><b>[1] Multi-task WaveNet: A Multi-task Generative Model for Statistical Parametric Speech Synthesis without Fundamental Frequency Conditions </b></font>
         <button onclick="{location.href='paper1.html'}"><font face="Arial Unicode MS" size="4" color="red">Demo</font></button>
         </td>
 
@@ -27,17 +25,18 @@
 
 	<tr>
 		<td width="350" align="left">
-		<font face="Arial Unicode MS" size="4"><b>[2] EMPHASIS: An Emotional Phoneme-based Acoustic Model for Speech Synthesis System </font></b>
+		<font face="Arial Unicode MS" size="4"><b>[2] EMPHASIS: An Emotional Phoneme-based Acoustic Model for Speech Synthesis System </b></font>
         <button onclick="{location.href='paper2.html'}"><font face="Arial Unicode MS" size="4" color="red">Demo</font></button> 
         </td>
 	</tr>
 		<td width="350" align="left">
-		<font face="Arial Unicode MS" size="4"><b>[3] Multi-references Tacotron by Intercross Training for Style Disentangling, Transfer and Control </font></b>
+		<font face="Arial Unicode MS" size="4"><b>[3] Multi-references Tacotron by Intercross Training for Style Disentangling, Transfer and Control in Speech Synthesis</b></font>
         <button onclick="{location.href='paper3.html'}"><font face="Arial Unicode MS" size="4" color="red">Demo</font></button> 
         </td>
 	<tr>
 	</tr>
 	</table>
+    </div>
   </body>
 </html>
 
