--- a/paper3.html
+++ b/paper3.html
@@ -520,6 +520,16 @@
 
     <h3 style="padding-top:16px;"><a name="Multi-reference">2 Multi-reference</a></h3>
     <h4 style="padding-top:16px;"><a name="Style_controlM">2.1 Style Control</a></h4>
+    <div style="padding-top:16px;">
+        In the experiments, we control two styles: speaker and prosody.
+        We define 5 prosodies by different speaking scenes: news, story, radio, poetry, call-center.
+        We briefly conclude their features as follows.
+    </div>
+    <div>news: relative fast; formal.</div>
+    <div>story: many transitions and breaks.</div>
+    <div>radio: relative slow; deep and attractive voice.</div>
+    <div>poetry: slow; obeys rules of rhyming.</div>
+    <div>call-center: relative fast; sweet;</div>
     <div class="someTab">
         <div style="padding-top:16px;">
         We conduct parallel multi-styles control. As table 1 in paper shows, speaker F17 and speaker M5 both have style
