--- a/paper3.html
+++ b/paper3.html
@@ -541,7 +541,7 @@
     <div style="text-indent:2em;">call-center: relative fast; sweet;</div>
     <div class="someTab">
         <div style="padding-top:16px;">
-        We conduct parallel multi-styles control. As table 1 in our paper shows, speaker F17 and speaker M5 both have style
+        We conduct parallel multi-styles control. As table 1 in our paper shows, speaker F17 and speaker M5 both have styles
             news and radio.
         </div>
         <div>Formally, we generates audios according to following equations.</div>
@@ -988,19 +988,51 @@
     </div>
     <Table style="padding-top:16px;">
         <tr>
-            <th>News</th>
-            <th>Poetry</th>
-            <th>Radio</th>
+            <th></th>
+            <th>Style-news</th>
+            <th>Style-poetry</th>
+            <th>Style-radio</th>
         </tr>
         <tr>
             <th>
-                <audio src="paper3_demos/product-prosody/news.wav" controls></audio>
+                Text-news
             </th>
             <th>
-                <audio src="paper3_demos/product-prosody/poetry.wav" controls></audio>
+                <audio src="paper3_demos/product-prosody/t-news-s-news.wav" controls></audio>
             </th>
             <th>
-                <audio src="paper3_demos/product-prosody/radio.wav" controls></audio>
+                <audio src="paper3_demos/product-prosody/t-news-s-poetry.wav" controls></audio>
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-news-s-radio.wav" controls></audio>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Text-poetry
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-poetry-s-news.wav" controls></audio>
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-poetry-s-poetry.wav" controls></audio>
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-poetry-s-radio.wav" controls></audio>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Text-radio
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-radio-s-news.wav" controls></audio>
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-radio-s-poetry.wav" controls></audio>
+            </th>
+            <th>
+                <audio src="paper3_demos/product-prosody/t-radio-s-radio.wav" controls></audio>
             </th>
         </tr>
     </Table>
