update the paper3

--- a/paper3.html
+++ b/paper3.html
@@ -73,6 +73,7 @@
                         </li>
                     </ol>
                 </ol>
+		<!-- temp Comments out 
                 <li style="font-size: 18px"><a href="#Extra_experiments">Extra experiments</a></li>
                 <ol>
                     <li>
@@ -87,6 +88,7 @@
                         </li>
                     </ol>
                 </ol>
+		-->
                 <li style="font-size: 18px"><a href="#Possible_products_preview">Possible products preview</a></li>
                 <ol>
                     <li>
